fix expense table item text overlapping on mobile

--- a/src/styles/ExpenseTable.module.scss
+++ b/src/styles/ExpenseTable.module.scss
@@ -62,7 +62,7 @@
   }
 
   @media (max-width: 490px) {
-    width: 90%;
+    width: 100%;
   }
 }
 
