--- a/src/styles/GenericExpenseListItem.module.scss
+++ b/src/styles/GenericExpenseListItem.module.scss
@@ -13,8 +13,18 @@
   }
 }
 
+.listItemContainer {
+  text-wrap: wrap;
+  width: 20%;
+
+  &:last-of-type .listItem {
+    text-align: end;
+    font-weight: 700;
+  }
+}
+
 .listItem {
-  font-weight: 600;
+  font-weight: 500;
   text-transform: capitalize;
 
   @media (max-width: 1200px) {
