--- a/src/styles/boardFootCalculator.module.scss
+++ b/src/styles/boardFootCalculator.module.scss
@@ -45,6 +45,10 @@
 	display: block;
 	margin-top: 0;
 	margin: 1rem auto 0 auto;
+
+	@media (max-width: 490px) {
+		margin-top: 0;
+	}
 }
 
 .sidebarOpen {
@@ -53,6 +57,9 @@
     width: 65%;
 		padding: 0 1rem 0 1rem;
 		z-index: 2;
+		top: 0;
+		left: 0;
+		bottom: 0;
 		
 		& form {
 			display: block;
@@ -61,6 +68,10 @@
 		& .sidebarIcon {
 		color: rgb(7, 7, 7);
 		margin: 1rem 0 0 auto;
+
+		@media (max-width: 490px) {
+			margin-top: 0;
+		}
 		}
   }
 
